<resources>
    <string name="app_name">Gita Final Project</string>
    <string name="name">name</string>
    <string name="weight">Weight (kg)</string>
    <string name="last_blood_donated_date"><font size="35">Last blood donated Date (Year-Month-Day)</font></string>
    <string name="location">Location</string>
    <string name="mobile_number">Mobile number</string>
    <string name="blood_group">Blood group</string>
    <string name="add_personal_data">add personal data</string>
    <string name="db_name">bloodBank</string>
    <string name="sort_by_weight">Sort by Weight</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="see_blood_base">see blood base</string>

</resources>